--- a/config.yaml
+++ b/config.yaml
@@ -35,9 +35,7 @@ keywords:
     "Image Matching":
         filters: ["Image Matching", "Keypoint Matching", 
                   "Line Segment Detection", "Local Feature Matching"]
-    "NeRF":
-        filters: ["NeRF"]
     "3D Gaussian Splatting":
-        filters: ["3D Gaussian Splatting", "real-time rendering',
+        filters: ["3D Gaussian Splatting", "real-time rendering",
                   "Mesh", "3D Mesh converter"]
 
